test deploy infrastructure - aws environment signaling

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="drop_content">
-  <mat-toolbar color="primary">
-    <span fxFlex>Admin Monitor Suite - {{ "HEADER.name" | translate }}</span>
+  <mat-toolbar color="accent">
+    <span fxFlex>Admin Monitor Suite - {{ "HEADER.name" | translate }} - aws env</span>
     <button mat-button *ngIf="user.isUserLoggedIn()" (click)="logout()">
       {{ "HEADER.logout" | translate }}
     </button>
