header toolbar primary color

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,5 +1,5 @@
 <header class="drop_content">
-  <mat-toolbar color="accent">
+  <mat-toolbar color="primary">
     <span fxFlex>Admin Monitor Suite - {{ "HEADER.name" | translate }} - aws env</span>
     <button mat-button *ngIf="user.isUserLoggedIn()" (click)="logout()">
       {{ "HEADER.logout" | translate }}
