--- a/src/app/pages/admin-console/navbar/navbar.component.html
+++ b/src/app/pages/admin-console/navbar/navbar.component.html
@@ -9,5 +9,6 @@
     <button mat-button color="{{crawler}}" class="menu-item" routerLink="/console/crawler">{{ "MENU.crawler" | translate }}</button>
     <button mat-button color="{{pages}}" class="menu-item" routerLink="/console/pages">{{ "MENU.pages" | translate }}</button>
     <!--<button mat-button color="{{settings}}" class="menu-item" routerLink="/console/settings">{{ "MENU.settings" | translate }}</button>-->
+    <button mat-button color="{{pages}}" class="menu-item" routerLink="/console/usability">{{ "MENU.usability" | translate }}</button>
   </mat-nav-list>
 </mat-card>
