Preliminary implementation of checklist detail view.

--- a/src/app/pages/usability/usability.component.css
+++ b/src/app/pages/usability/usability.component.css
@@ -3,3 +3,11 @@
 .table-filter input {
   width: 100%;
 }
+
+.pointer {
+  cursor: pointer;
+}
+
+.pointer:hover {
+  background-color: rgba(0,0,0,.12);
+}
